# nowhere

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAYERS.md  README.md  pyproject.toml
nowhere/: EXPLORABLE_PLACES.md  TRAVEL_JOURNAL_RULES.md  art.py  baked.py  country.py  describe.py  encounters.py  geocode.py  humanities.py  hydrology.py  knowledge.py  landing.py  life.py  listen.py  localcolor.py  marks.py  placememory.py  places.py  playground.py  poster.py  providers.py  radio.py  salience.py  server.py  sky.py  soundscape.py  state.py  terrain.py  walk.py  water.py  weather.py  web.py
nowhere/data/: art_by_city.json  build_index.py  encounters.txt  explorable_index.json  flora_by_place.json  food.txt  food_americas_africa_oceania.txt  food_by_country.json  food_east_asia.txt  food_europe_middleeast.txt  grid_tiny.npz  humanities.json  humanities_films.json  humanities_historical.json  knowledge.json  localcolor.json  localcolor_americas_africa_oceania.json  localcolor_china.json  localcolor_europe_middleeast.json  localcolor_japan_korea_sea.json  localcolor_natural.json  places_patch.json  pool.json  radio_fallback.json  scene_china_enhanced.txt  scene_elements.json  scene_food.txt  scene_life.txt  scene_meta.json  scene_museum.txt  scene_ocean.txt  scene_plants.txt  (+22 more)
nowhere_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: bake_pool.py  build_art_db.py  build_grid.py  build_offline_pack.py  build_relief.py  build_tiles.py  build_world_map.py  compress_tiles.py  convert_srtm.py  fetch_elevation.py  geocode_humanities.py  harvest_local.py  import_geonames.py
(+39 files in other folders)
